--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
         <meta charset="utf-8"/>
         <meta name="Rimajemaiel" content="Hello this is my website"/>
         <title> Rima website</title>
-        <ul>
-            <li> <a href="#" > Home </a></li>
-            <li> <a href="#"> About </a> </li>
-            <li> <a href="#" > Work</a></li>
-            <li> <a href="#" > Contact </a></li>
-            <button> Contact me </button>
-        </ul>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
+       <header>
+         <nav>
+            <ul class="nav_links">
+                <li> <a href="#" > Home </a></li>
+                <li> <a href="#"> About </a> </li>
+                <li> <a href="#" > Work</a></li>
+                <li> <a href="#" > Contact </a></li>
+                <button> Contact me </button>
+            </ul>
+           </nav>
+       </header>
         <h1> I m Rima Jemaiel </h1>
         <p> I m a Ux/Ui designer</p>
         <embed src ="gif rima.gif" alt="photo" width="50%">
